bottom black bar covers youtube property-fixed

--- a/src/main/java/org/ednovo/gooru/client/mvp/play/collection/footer/footerstyle.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/play/collection/footer/footerstyle.css
@@ -1,6 +1,6 @@
 .footerContainer{
 	background:#333333;
-	padding:10px 0 5px 0;
+	padding:8px 0 0px 0;
 	position:fixed;
 	width:100%;
 	float:left;
